sandbox/output
StringCalculatorTest.java:13: error: ')' expected
        assertEquals(1, StringCalculator.add("1");
                                                 ^
1 error
